--- a/src/Web/MusicX.Web.Client/Pages/Songs/RedirectToSongPage.razor
+++ b/src/Web/MusicX.Web.Client/Pages/Songs/RedirectToSongPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/songsinforedirect/{SongId:int}/{SongName}"
-@inject IUriHelper UriHelper;
+@inject IUriHelper UriHelper
 
-@functions {
+@code {
 
     [Parameter]
     private int SongId { get; set; } = 1;
