--- a/src/Web/MusicX.Web.Client/_Imports.razor
+++ b/src/Web/MusicX.Web.Client/_Imports.razor
@@ -1,7 +1,7 @@
 @using System.Net.Http
-@using Microsoft.AspNetCore.Blazor.Layouts
-@using Microsoft.AspNetCore.Blazor.Routing
-@using Microsoft.AspNetCore.Blazor.Services
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Layouts
+@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
 @using MusicX.Web.Client
 @using MusicX.Web.Client.Infrastructure
@@ -11,3 +11,4 @@
 @inject IApplicationState State
 @inject IApiClient ApiClient
 @inject IMediaPlayer MediaPlayer
+@inject IJSRuntime JsRuntime
